[package]
name = "rss-reader-rs"
version = "0.1.0"
authors = ["Huy Tran <kingbazoka@gmail.com>"]

[dependencies]
feed-parser = { path = "./feed-parser" }
readability = "0.1.5"
chrono      = { version = "^0", features = ["serde"] }
crossbeam   = "0.7"
actix-web   = "1.0.0"
serde       = "1.0"
serde_json  = "1.0"
env_logger  = "0.6"